start a flask app and fix all the link

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,13 +10,13 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./static/css/style.css" />
+    <link rel="stylesheet" href="../static/logo.png" />
     <title>Document</title>
   </head>
   <body>
     <nav class="navbar navbar-light bg-light align-items-center">
       <img
-        src="./static/img/logo.png"
+        src="static/images/logo.png"
         width="60"
         height="60"
         class="d-inline-block align-top"
@@ -27,7 +27,7 @@
     <!-- Intro Part Start Here -->
     <div class="m-2 border border-dark rounded d-flex align-items-center">
       <img
-        src="./static/img/team.jpg"
+        src="static/images/team.jpg"
         class="rounded float-left img-thumbnail p-2 m-2"
       />
       <div>
@@ -63,19 +63,19 @@
       </div>
       <div class="carts d-flex justify-content-center m-5">
         <div class="border border-dark m-1 p-1 w-40 h-40">
-          <img src="./static/img/placeholder-600x600.jpg" />
+          <img src="static/images/placeholder-600x600.jpg" />
           <p>Chart 1</p>
         </div>
         <div class="border border-dark m-1 p-1 w-40 h-40">
-          <img src="./static/img/placeholder-600x600.jpg" />
+          <img src="static/images/placeholder-600x600.jpg" />
           <p>Chart 2</p>
         </div>
         <div class="border border-dark m-1 p-1 w-40 h-40">
-          <img src="./static/img/placeholder-600x600.jpg" />
+          <img src="static/images/placeholder-600x600.jpg" />
           <p>Chart 3</p>
         </div>
         <div class="border border-dark m-1 p-1 w-40 h-40">
-          <img src="./static/img/placeholder-600x600.jpg" />
+          <img src="static/images/placeholder-600x600.jpg" />
           <p>Chart 4</p>
         </div>
       </div>
@@ -99,6 +99,6 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
-    <script src="./static/js/app.js"></script>
+    <script src="static/js/app.js"></script>
   </body>
 </html>
