--- a/templates/index.html
+++ b/templates/index.html
@@ -67,29 +67,39 @@
                   <input type="text" placeholder="Player Name" id="playerName" />
                 </li>
                 <li class="list-group-item d-flex flex-column">
-                  <label for="concussionLength">Concussion Length</label>
-                  <input type="text" placeholder="Concussion Length" id="concussionLength" />
+                  <label for="season">Season</label>
+                  <input type="text" placeholder="Season" id="season" /> 
                 </li>
                 <li class="list-group-item d-flex flex-column">
-                  <button>predict</button>
-                </li>
+                  <label for="concussionLength">Concussion Length</label>
+              <input type="text" placeholder="Concussion Length" id="concussionLength" />  
+                </li> 
+
               </ul>
             </form>
           </div>
   
           <!-- Table -->
-          <div class="col-md-9">
+          <div data-bs-spy="scroll" class="col-md-9 ">
             <table class="table table-striped">
               <thead>
                 <tr>
+                  <!--<th>index</th>
+                  <th>Pkey</th> -->
                   <th>Season</th>
                   <th>Player Name</th>
+                  <th>Team</th>
                   <th>Position</th>
+                  <th>Games Played</th>
                   <th>i_f_goals</th>
                   <th>i_f_points</th>
                   <th>i_f_penalityminutes</th>
                   <th>i_f_hits</th>
                   <th>i_f_takeaways</th>
+                  <th>i_f_giveaways</th>
+                  <th>onice_corsipercentage</th>
+                  <th>onice_fenwickpercentage</th>
+                  <th>games_missed</th>
                 </tr>
               </thead>
               <tbody></tbody>
@@ -124,10 +134,6 @@
           <p>Chart 4</p>
         </div>
       </div>
-    </div>
-</div>
-    </div>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script
@@ -145,6 +151,8 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
+   
+    
     <script src="{{url_for('static', filename='js/data.js')}}"></script>
     <script src="{{url_for('static', filename='js/table.js')}}"></script>
     <script src="{{url_for('static', filename='js/app.js')}}"></script>
