fix the scrolling for the tabel

--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,7 @@
   
     <div class="analysis">
       <div class="container-fluid">
-        <div class="row">
+        <div class="row ">
           <div class="col-md-3">
             <form class="">
               <p>Filter Search</p>
@@ -85,7 +85,7 @@
             </form>
           </div>
           <!-- Table -->
-          <div class="col-md-9 container-fluid overflow-auto">
+          <div class="col-md-9 container-fluid scroll">
             <table class="table table-striped">
               <thead>
                 <tr>
