--- a/static/css/main.css
+++ b/static/css/main.css
@@ -20,3 +20,13 @@ p {
     overflow:auto;
 }
 
+.textLink {
+    font-size: 50px;
+    color: white;
+    direction: none;
+}
+
+.textLink:hover{
+    color: white ;
+}
+
