--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -19,16 +19,16 @@
   <body>
     <nav class="navbar navbar-light bg-light align-items-center">
       <a class="navbar-brand" href="/">
-      <img
-        src="{{url_for('static', filename = 'images/logo.png')}}"
-        width="60"
-        height="60"
-        class="d-inline-block align-top"
-        alt=""
-      />
+        <img
+          src="{{url_for('static', filename = 'images/logo.png')}}"
+          width="60"
+          height="60"
+          class="d-inline-block align-top"
+          alt=""
+        />
       </a>
       <div>
-      <a class="navbar-brand" href="/mlmodel">ML Models</a>
+        <a class="navbar-brand" href="/mlmodel">ML Models</a>
       </div>
     </nav>
     <div class="analysis">
@@ -97,26 +97,29 @@
             <ul class="list-group">
               <li class="list-group-item d-flex flex-column">
                 <label for="name">Player Name</label>
-                <select id="nameFilter"></select>
+                <select
+                  id="name_select"
+                  onchange="optionChanged(this.value)"
+                ></select>
               </li>
               <li class="list-group-item d-flex flex-column">
                 <label for="season">Season</label>
-                <select id="seasonFilter"></select>
+                <select id="season_select"></select>
               </li>
               <li class="list-group-item d-flex flex-column">
                 <label for="team">Team</label>
-                <select id="teamFilter"></select>
+                <select id="team_select"></select>
               </li>
             </ul>
           </form>
         </div>
         <!-- Table -->
         <div class="col-md-9">
-          <div class="row">
-            <div class="border border-dark rounded m-1" id="chart"></div>
-            <div class="border border-dark rounded m-1" id="chart2"></div>
-            <div class="border border-dark rounded m-1" id="chart3"></div>
-          </div>
+          <div id="myDiv"></div>
+          <div id="myDiv2"></div>
+          <div id="myDiv3"></div>
+          <div id="myDiv4"></div>
+          <div id="myDiv5"></div>
         </div>
       </div>
     </div>
@@ -143,6 +146,5 @@
     <script src="{{url_for('static', filename='js/data.js')}}"></script>
     <script src="{{url_for('static', filename='js/table.js')}}"></script>
     <script src="{{url_for('static', filename='js/chart.js')}}"></script>
-    <script src="{{url_for('static', filename='js/app.js')}}"></script>
   </body>
 </html>
