--- a/templates/index.html
+++ b/templates/index.html
@@ -33,8 +33,8 @@
 
     <div class="m-2 border border-dark rounded d-flex align-items-center">
       <img
-        src="{{url_for('static', filename = 'images/team.jpg')}}"
-        class="rounded float-left img-thumbnail p-2 m-2"
+        src="{{url_for('static', filename = 'images/team2.jpg')}}"
+        class="rounded float-left img-thumbnail p-2 m-2 teamImg"
       />
       <div>
         <p class="p-3 text-justify font-weight-bold">
