add the conntion to postgress database

--- a/templates/mlmodel.html
+++ b/templates/mlmodel.html
@@ -32,6 +32,7 @@
       </div>
     </nav>
   <h1>machine learning model will be here</h1>
+  <h2> {{ prediction_text }} </h2>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
