--- a/templates/mlmodel.html
+++ b/templates/mlmodel.html
@@ -32,6 +32,12 @@
       </div>
     </nav>
   <h1>machine learning model will be here</h1>
+<form action = "{{ url_for("ml_model")  }}" method="post" >
+  <input type="number" name="missed_games" required="required" />
+  <button type="submit" class="btn">Predict</button>
+</form>
+
+
   <h2> {{ prediction_text }} </h2>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
